--- a/site/module2-solution/style.css
+++ b/site/module2-solution/style.css
@@ -20,8 +20,7 @@ h2{
 	font-size: 1.25em;
 	font-family: "Comic Sans MS", cursive, sans-serif;
 	text-align: center;
-	border-color: black;
-	border: 1px;
+ 	border: 1px solid black;
 	position: absolute;
 	top: -20px;
 	right: 0px;
@@ -33,8 +32,6 @@ h2{
 }
 
 .b1,.b2,.b3{
-	border-color: black;
-	border: 1px;
 	position:relative;
 	float: left;
 	padding: 10px;
@@ -47,6 +44,7 @@ h2{
 	font-weight: 900;
 	text-align: justify;
 	background-color: #B1BBB5;
+	border: 1px solid black;
 	padding: 20px;
 	position: relative;
 }
