--- a/site/Module-3-solution/css/style.css
+++ b/site/Module-3-solution/css/style.css
@@ -1,5 +1,4 @@
 body {
-
   font-family: Arial , Helvica, sans-serif;
 }
 
@@ -58,7 +57,7 @@ body {
 .square{  
   padding: 0px 20px 10px 20px;
   background-color: grey;
-  color: black;
+  color: white;
   text-align: justify; 
   font-size:1.2em;
 }
@@ -74,6 +73,7 @@ body {
   font-size:1.6em;
   font-weight: 900;
   padding-top: 10px;
+  color:black;
 }
 /*@media(min-width:768px) {
   .nav-bottom{
